[package]
name = "minerva"
version = "0.1.0"
edition = "2021"
authors = ["zaneli <shun.otani@gmail.com>"]

[dependencies]
actix-web = { version = "3.3", features = ["rustls"] }
actix-rt = "1.1"
aws-sdk-athena = "0.10"
dotenv = "0.15"
evmap = "10.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
